# mongit

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.beads/: issues.jsonl
.opencode/: .template-manifest.json  AGENTS.md  dcp.jsonc  opencode.json  opencode.json.tui-migration.bak  package-lock.json
.opencode/plugin/: README.md  copilot-auth.ts
design-system/mongit/: MASTER.md
docs/: INSTALL.md  SMOKE-TEST.md
docs/handoffs/: 2026-03-13-mongit-phase1-planning.md
docs/plans/: 2026-03-13-standalone-vcs-client-product-plan.md
docs/research/: 2026-03-13-git-engine-architecture-recommendation.md  2026-03-13-jetbrains-vcs-ui-analysis.md  2026-03-13-product-opportunities-for-new-vcs-client.md  2026-03-13-solo-power-developer-persona-and-positioning.md  2026-03-13-standalone-desktop-architecture-recommendation.md  2026-03-13-technical-subsystems-and-risk-map.md  2026-03-13-v1-feature-scope-for-macos-git-client.md  2026-03-13-version-control-client-competitor-matrix.md  2026-03-16-gitbutler-rebase-conflict-ux.md  2026-03-bundled-git-strategy.md
scripts/: build-release.sh  check-version-sync.sh  determinism-check.ts  perf-bench.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  recents.rs  watcher.rs
src-tauri/src/git/: branch.rs  cli.rs  commit.rs  conflict.rs  error.rs  mod.rs  repository.rs  resolver.rs  staging.rs
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+236 files in other folders)
