[package]
name = "mongit"
version = "0.1.0"
description = "A standalone Git client for macOS"
authors = ["huynhgiabuu"]
edition = "2021"

[lib]
name = "mongit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", features = ["vendored-libgit2"] }
notify = "8"
notify-debouncer-full = "0.5"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
which = "8"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
